ALB-Ingress-Controller/apps/mywebapp/k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mywebapp
    app.kubernetes.io/instance: mywebapp-demo
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: picture-upload
    app.kubernetes.io/managed-by: kubectl
  name: mywebapp-deployment
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mywebapp
    spec:
      containers:
        - image: 001082169132.dkr.ecr.us-east-1.amazonaws.com/mywebapp:windows
          imagePullPolicy: Always
          name: mywebapp
          ports:
            - containerPort: 80
