ALB-Ingress-Controller/apps/mywebapp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mywebapp
    app.kubernetes.io/instance: mywebapp-demo
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: picture-upload
    app.kubernetes.io/managed-by: kubectl
  name: mywebapp
spec:
  selector:
    app: mywebapp
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
