ALB-Ingress-Controller/apps/mywebapp/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "mywebapp"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: mywebapp
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "mywebapp"
              servicePort: 80
